stream api usage improved